--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <a href="index.html"> About me </a>
                 </li>
                 <li>
-                    <a href="https://github.com/rsilvadevelloper?tab=repositories"> Projects </a> 
+                    <a href="https://github.com/rsilvadevelloper"> Projects </a> 
                 </li>
                 <li>
                     <a href="contact.html">Contact</a>
