--- a/contact.html
+++ b/contact.html
@@ -14,22 +14,22 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="index.html">Sobre mim</a>
+                        <a href="index.html">About</a>
                     </li>
                     <li>
-                        <a href="project.html">Projetos</a>
+                        <a href="https://github.com/rsilvadevelloper?tab=repositories">Projects</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contato</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </nav>
 
             <header class="center">
                 <div>
-                    <img src="./img/Ronalddasilva.jpg"></img>
+                    <img src="./img/Polish_20230803_173900869.jpg"></img>
                 </div>
-                <h1>Entre em contato!</h1>
+                <h1>Get in touch!</h1>
             </header>
             <form class="contact-form" action="https://formsubmit.co/agenciadigitalupbr@gmail.com" method="POST">
                 <div>
@@ -37,7 +37,7 @@
                     <input type="email" name="email" required>
                 </div>
                 <div>
-                    <label for="message">Mensagem</label>
+                    <label for="message">Message</label>
                     <input type="text" id="message" name="message" required>
                 </div>
                 <button type="submit">Send</button>
