--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <a href="index.html"> About me </a>
                 </li>
                 <li>
-                    <a href="https://github.com/rsilvadevelloper"> Projects </a> 
+                    <a href="https://github.com/rsilvadevelloper?tab=repositories"> Projects </a> 
                 </li>
                 <li>
                     <a href="contact.html">Contact</a>
@@ -28,7 +28,7 @@
 
         <header>
             <div class="center">
-                <img src="./img/Ronalddasilva.jpg"></img>
+                <img src="./img/Polish_20230803_173900869.jpg"></img>
             </div>
             <h1>Ronald da Silva</h1>
             <h2> Full Stack Web Developer </h2>
@@ -82,7 +82,7 @@ Development Tools: VS Code, Postman, etc.
                 <p>Github</p>
             </a>
 
-            <a href="https://www.instagram.com/rsilva.rn" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.instagram.com/digitalupbr" target="_blank" rel="noopener noreferrer">
                 <img src="./img/Instagram_logo_2016.svg.webp"></img>
                 <p>Instagram</p>
             </a>
