--- a/thanks.html
+++ b/thanks.html
@@ -27,7 +27,7 @@
 
             <header class="center">
                 <div>
-                    <img src="./img/Ronalddasilva.jpg"></img>
+                    <img src="./img/Polish_20230803_173900869.jpg"></img>
                 </div>
                 <h1> Thank you for your contact!</h1>
                 <p>I'll be back soon!:</p>
